# iceprogpico

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  iceprogpico.c  log.c  log.h  spi.h  spi_flash.c  spi_flash.h
.github/workflows/: build.yaml  test.yaml
tool/: progpico.py
